# 2026-01-2022437963-IC7602

./: .gitignore  2026-01-2022437963-IC7602.sln  README.md
Tareas Cortas/TC1/: Documentacion.md  RespuestaPreguntas.md
Tareas Cortas/TC1/Autrum/: AtmFileManager.cs  AudioComparator.cs  AudioPlayer.cs  AudioRecorder.cs  Autrum.csproj  FftProcessor.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  README.md
Tareas Cortas/TC1/Docs/: T1.txt
evaluaciones_individuales/Apuntes/: 2026-03-10-IC7602-2022437963-A1.md  2026-03-10-IC7602-2022437963-A2.md  2026-03-10-IC7602-2022437963-A3.md  2026-05-22-IC7602-2022437963-A4.md
evaluaciones_individuales/Examen/: ex.md
evaluaciones_individuales/Lecturas/: lectura1.md  lectura10.md  lectura2.md  lectura3.md  lectura4.md  lectura5.md  lectura6.md  lectura7.md  lectura8.md  lectura9.md
proyectos/P1/: Documentacion.md  build.sh  docker-compose.yml  install.sh
proyectos/P1/charts/: values.yaml
proyectos/P1/dns-api/: .env  Dockerfile  README.md  docker-compose.yml  go.mod  main.go
proyectos/P1/dns-interceptor/: CMakeLists.txt  Dockerfile
proyectos/P1/dns-interceptor/src/: api_client.cpp  api_client.h  base64.cpp  base64.h  dns_parser.cpp  dns_parser.h  dns_response.cpp  dns_response.h  main.cpp  query_handler.cpp  query_handler.h  udp_server.cpp  udp_server.h
proyectos/P1/dns-ui/: Dockerfile  README.md  index.html  nginx.conf  package.json
proyectos/P2/: Documentacion.md  Persona 4 - Docu.md  build.sh  install.sh  uninstall.sh
proyectos/P2/api/: server.js  (+3 more)
proyectos/ProyectoOpcional/: Automatización_Helm.md  ROUTER.md
(+155 files in other folders)
